fix styling for list on mobile screens

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-  height: 100%;
+  height: auto;
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
@@ -13,7 +13,6 @@ body {
   bottom: 0;
   z-index: 11;
   width: 100%;
-  height: 45%;
 }
 
 .overlay .search {
@@ -32,9 +31,9 @@ body {
 
 .locale-list li {
   position: relative;
-  min-height: 40px;
   padding: 10px 18px 7px;
   border-bottom: #888 1px solid;
+  background: #333;
 }
 
 .locale-list li:hover {
@@ -87,6 +86,10 @@ body {
     float: left;
     height: 100%;
     width: 25%;
+  }
+
+  .locale-list li {
+    min-height: 40px;
   }
 
   .overlay .search {
